--- a/Transparents/presentation_ch_simplification.tex
+++ b/Transparents/presentation_ch_simplification.tex
@@ -1,4 +1,4 @@
-% Created 2022-11-16 mer 14:34
+% Created 2023-10-26 jeu 09:39
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
 \usepackage[utf8]{inputenc}
@@ -15,7 +15,8 @@
 \usepackage{minted}
 \usepackage[, french]{babel}
 \usepackage{svg}
-\logo{\includegraphics[width=.1\textwidth]{../../by-sa.png}}
+\logo{\includegraphics[width=.1\textwidth]{../by-sa.png}}
+\AtBeginEnvironment{minted}{\renewcommand{\fcolorbox}[4][]{#4}}
 \usetheme{metropolis}
 \usecolortheme{}
 \usefonttheme{}
@@ -30,42 +31,42 @@
  pdftitle={Circuits logiques combinatoires et séquentiels},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.1 (Org mode 9.5.4)}, 
+ pdfcreator={Emacs 28.1 (Org mode 9.6.6)}, 
  pdflang={French}}
 \begin{document}
 
 \maketitle
 
 \section{Simplification logique}
-\label{sec:org95d99f7}
+\label{sec:org173a0cb}
 
-\begin{frame}[label={sec:orgb603955}]{Objectifs}
+\begin{frame}[label={sec:org2a5c35b}]{Objectifs}
 \begin{itemize}
-\item Pouvoir formuler une expression logique en forme canonique \emph{Produit
+\item Formuler une expression logique en forme canonique \emph{Produit
 de sommes} ou \emph{Somme de produits}, et convertir entre les deux formes
-\item Pouvoir simplifier une expression au moyen d'un diagramme de
+\item Simplifier une expression au moyen d'un diagramme de
 Karnaugh
-\item Pouvoir simplifier une expression par la méthode Quine-McCluskey
-\item Être familier avec les approches d'implémentation des fonctions
+\item Simplifier une expression par la méthode Quine-McCluskey
+\item Se familiariser avec les approches d'implémentation des fonctions
 simplifiées
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb8e9229}]{Expressions équivalentes}
+\begin{frame}[label={sec:org7b24e2a}]{Expressions équivalentes}
 \begin{itemize}
-\item Un des aspects ennuyeux avec les expressions logiques est que la correspondance entre expression et fonction logique n'est pas biunivoque: plusieurs expressions différentes peuvent correspondre à une seule et même fonction.
+\item Un des aspects ennuyeux des expressions logiques est que la correspondance entre expression et fonction logique n'est pas biunivoque: plusieurs expressions différentes peuvent correspondre à une seule et même fonction.
 
 \item De plus, certaines des expressions équivalentes peuvent être plus complexes que d'autres.
 
-\item Lorsque vient le temps d'implémenter avec des portes une fonction logique, il est la plupart du temps plus efficace d'implémenter selon une expression plus simple, voir minimale.
+\item Lorsque vient le temps d'implémenter avec des portes une fonction logique, il est la plupart du temps plus efficace d'implémenter selon une expression plus simple, voire minimale.
 
 \item On doit donc considérer des approches systématiques et efficaces pour simplifier les expressions logiques.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0c9b18e}]{Expressions équivalentes \ldots{} 2}
+\begin{frame}[label={sec:orga126669}]{Expressions équivalentes \ldots{} 2}
 \begin{itemize}
-\item Quand une expression Booléenne est implémentée avec des portes logiques, chaque terme nécessite une porte et chaque variable au sein d'un terme correspond à une entrée de la porte.
+\item Quand une expression booléenne est implémentée avec des portes logiques, chaque terme nécessite une porte et chaque variable au sein d'un terme correspond à une entrée de la porte.
 
 \item On appelle \alert{littéral} une variable qui apparaît dans un terme, sous forme complémentée ou non.
 
@@ -75,21 +76,21 @@ simplifiées
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org05550ce}]{Formes canoniques}
+\begin{frame}[label={sec:orgf9637bf}]{Formes canoniques}
 \begin{block}{Minterms et maxterms}
 \begin{itemize}
-\item Dans une expression, une variable \(x\) peut apparaître telle qu'elle \(x\) ou complémentée \(x^\prime\).
+\item Dans une expression, une variable \(x\) peut apparaître telle quelle \(x\) ou complémentée \(x^\prime\).
 
-\item Si on considère les combinaisons possibles de deux variables via un opérateur ET, on a alors quatres possibilités: \(x^\prime y^\prime, x^\prime y, x y^\prime,x y\).
+\item Si on considère les combinaisons possibles de deux variables via un opérateur ET, on a alors quatre possibilités: \(x^\prime y^\prime, x^\prime y, x y^\prime,x y\).
 
-\item Chacun de ces quatres termes s'appelle un \alert{minterm}.
+\item Chacun de ces quatre termes s'appelle un \alert{minterm}.
 
 \item De façon équivalente (duale, en vérité), \(n\) variables reliées par une fonction OU peuvent donner lieu à \(2^n\) termes distincts, appelés \alert{maxterms}.
 \end{itemize}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org74a118f}]{Formes canoniques \ldots{} 2}
+\begin{frame}[label={sec:org15ed4b6}]{Formes canoniques \ldots{} 2}
 \begin{itemize}
 \item De façon générale, pour \(n\) variables, on aura \(2^n\) minterms ou \(2^n\) maxterms différents possibles.
 
@@ -97,74 +98,74 @@ simplifiées
 
 \item Le numéro d'étiquette d'un minterm est construit de la façon suivante.
 
-\item Une variable complémentée amène un bit d'étiquette 0, une variable telle qu'elle amène un bit d'étiquette 1.
+\item Une variable complémentée amène un bit d'étiquette 0, une variable telle quelle amène un bit d'étiquette 1.
 
 \item En ordonnant les bits selon l'ordre alphabétique des variables, on obtient un vecteur de bits qui donnera le numéro à assigner au minterm.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7a8bfa6}]{Formes canoniques \ldots{} 3}
+\begin{frame}[label={sec:org6a3f5fd}]{Formes canoniques \ldots{} 3}
 \begin{itemize}
 \item Par exemple, le minterm \(x y^\prime z\) donnera l'étiquette 101, donc le numéro de minterm (en équivalent décimal) 5.
 
-\item La règle pour les maxterms est duale: une étiquette 0 pour une variable telle qu'elle, et une étiquette 1 pour une variable complémentée.
+\item La règle pour les maxterms est duale: une étiquette 0 pour une variable telle quelle, et une étiquette 1 pour une variable complémentée.
 
 \item Chaque maxterm est le complément du minterm correspondant (de même numéro), et \emph{vice versa}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org39a7ac3}]{Formes canoniques \ldots{} 4}
+\begin{frame}[label={sec:org9a6926d}]{Formes canoniques \ldots{} 4}
 \begin{itemize}
-\item Dans le tableau \ref{tab:org34d351f}, on montre les symboles de la forme \(m_j\) pour les mintems et \(M_j\) pour les maxterms, avec \(j\) qui est l'équivalent décimal de la combinaison de bits correspondante.
+\item Dans le tableau \ref{tab:org21d1091}, on montre les symboles de la forme \(m_j\) pour les minterms et \(M_j\) pour les maxterms, avec \(j\) qui est l'équivalent décimal de la combinaison de bits correspondante.
 \end{itemize}
 
 \begin{table}[htbp]
-\caption{\label{tab:org34d351f}Minterms et maxterms pour trois variables}
+\caption{\label{tab:org21d1091}Minterms et maxterms pour trois variables}
 \centering
 \begin{tabular}{rrrllll}
-\(x\) & \(y\) & \(z\) & Minterm & Symb. & Maxterm & Symb.\\
+\(x\) & \(y\) & \(z\) & Minterm & Symb. & Maxterm & Symb.\\[0pt]
 \hline
-0 & 0 & 0 & \(x^\prime y^\prime z^\prime\) & \(m_0\) & \(x+ y+ z\) & \(M_0\)\\
-0 & 0 & 1 & \(x^\prime y^\prime z\) & \(m_1\) & \(x+ y+ z^\prime\) & \(M_1\)\\
-0 & 1 & 0 & \(x^\prime y z^\prime\) & \(m_2\) & \(x+ y^\prime+ z\) & \(M_2\)\\
-0 & 1 & 1 & \(x^\prime y z\) & \(m_3\) & \(x+ y^\prime+ z^\prime\) & \(M_3\)\\
-1 & 0 & 0 & \(x y^\prime z^\prime\) & \(m_4\) & \(x^\prime+ y+ z\) & \(M_4\)\\
-1 & 0 & 1 & \(x y^\prime z\) & \(m_5\) & \(x^\prime+ y+ z^\prime\) & \(M_5\)\\
-1 & 1 & 0 & \(x y z^\prime\) & \(m_6\) & \(x^\prime+ y^\prime+ z\) & \(M_6\)\\
-1 & 1 & 1 & \(x y z\) & \(m_7\) & \(x^\prime + y^\prime+ z^\prime\) & \(M_7\)\\
+0 & 0 & 0 & \(x^\prime y^\prime z^\prime\) & \(m_0\) & \(x+ y+ z\) & \(M_0\)\\[0pt]
+0 & 0 & 1 & \(x^\prime y^\prime z\) & \(m_1\) & \(x+ y+ z^\prime\) & \(M_1\)\\[0pt]
+0 & 1 & 0 & \(x^\prime y z^\prime\) & \(m_2\) & \(x+ y^\prime+ z\) & \(M_2\)\\[0pt]
+0 & 1 & 1 & \(x^\prime y z\) & \(m_3\) & \(x+ y^\prime+ z^\prime\) & \(M_3\)\\[0pt]
+1 & 0 & 0 & \(x y^\prime z^\prime\) & \(m_4\) & \(x^\prime+ y+ z\) & \(M_4\)\\[0pt]
+1 & 0 & 1 & \(x y^\prime z\) & \(m_5\) & \(x^\prime+ y+ z^\prime\) & \(M_5\)\\[0pt]
+1 & 1 & 0 & \(x y z^\prime\) & \(m_6\) & \(x^\prime+ y^\prime+ z\) & \(M_6\)\\[0pt]
+1 & 1 & 1 & \(x y z\) & \(m_7\) & \(x^\prime + y^\prime+ z^\prime\) & \(M_7\)\\[0pt]
 \end{tabular}
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:orgdaebdc7}]{Formes canoniques \ldots{} 5}
+\begin{frame}[label={sec:org7a9657a}]{Formes canoniques \ldots{} 5}
 \begin{itemize}
 \item Pour la fonction \(F_1\) dont le tableau de vérité est le suivant:
 \end{itemize}
 
 \begin{table}[htbp]
-\caption{\label{tab:org2cc1502}Fonction de trois variables}
+\caption{\label{tab:org66c8c44}Fonction de trois variables}
 \centering
 \begin{tabular}{rrrlr}
-\(x\) & \(y\) & \(z\) &  & \(F_1\)\\
+\(x\) & \(y\) & \(z\) &  & \(F_1\)\\[0pt]
 \hline
-0 & 0 & 0 &  & 0\\
-0 & 0 & 1 &  & 0\\
-0 & 1 & 0 &  & 1\\
-0 & 1 & 1 &  & 0\\
-1 & 0 & 0 &  & 1\\
-1 & 0 & 1 &  & 1\\
-1 & 1 & 0 &  & 1\\
-1 & 1 & 1 &  & 1\\
+0 & 0 & 0 &  & 0\\[0pt]
+0 & 0 & 1 &  & 0\\[0pt]
+0 & 1 & 0 &  & 1\\[0pt]
+0 & 1 & 1 &  & 0\\[0pt]
+1 & 0 & 0 &  & 1\\[0pt]
+1 & 0 & 1 &  & 1\\[0pt]
+1 & 1 & 0 &  & 1\\[0pt]
+1 & 1 & 1 &  & 1\\[0pt]
 \end{tabular}
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:orgf7cb6d5}]{\emph{Somme de produits}}
+\begin{frame}[label={sec:orgd3c2544}]{\emph{Somme de produits}}
 \begin{itemize}
 \item on peut donc écrire
 \end{itemize}
 
-$$ F_1 = x y^\prime
+$$ F_1 =  x^\prime y
 z^\prime + x y^\prime z^\prime + x y^\prime z + x y z^\prime + x y z =
 m_2 + m_4 + m_5 + m_6 + m_7 $$
 
@@ -175,7 +176,7 @@ m_2 + m_4 + m_5 + m_6 + m_7 $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga662e64}]{Notation compacte \ldots{} 2}
+\begin{frame}[label={sec:org09dcc04}]{Notation compacte \ldots{} 2}
 \begin{itemize}
 \item Pour simplifier la notation, on peut écrire de façon plus compacte
 \end{itemize}
@@ -187,7 +188,7 @@ $$F_1 = \sum (2, 4, 5, 6, 7)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org05a0186}]{Complément d'une fonction}
+\begin{frame}[label={sec:org9ad0bca}]{Complément d'une fonction}
 \begin{itemize}
 \item Si on veut exprimer le complément d'une fonction, on peut lire dans le tableau de vérité les combinaisons pour lesquelles la fonction vaut 0.
 
@@ -200,7 +201,7 @@ $$ F_1^\prime = m_0 + m_1 + m_3 = x^\prime y^\prime z^\prime +
 x^\prime y^\prime z + x^\prime y z $$
 \end{frame}
 
-\begin{frame}[label={sec:org622f1ae}]{\emph{Produit de sommes}}
+\begin{frame}[label={sec:org666dd40}]{\emph{Produit de sommes}}
 \begin{itemize}
 \item Si on complémente \(F_1^\prime\), on obtiendra naturellement \(F_1\).
 
@@ -223,7 +224,7 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2689bd5}]{Somme de produits}
+\begin{frame}[label={sec:org72fd7b9}]{Somme de produits}
 \begin{itemize}
 \item Pour \(n\) variables binaires, on a \(2^n\) minterms différents possibles.
 
@@ -233,7 +234,7 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org24a47cc}]{Conversion vers forme canonique somme de produits}
+\begin{frame}[label={sec:org0db6436}]{Conversion vers forme canonique somme de produits}
 \begin{itemize}
 \item Si on veut convertir en forme canonique \emph{somme de produits} l'expression pour une fonction qui ne serait pas sous cette forme, on commence par faire l'expansion de l'expression en forme \emph{somme de produits}.
 
@@ -247,11 +248,11 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org22f9bbd}]{Conversion vers forme canonique produit de sommes}
+\begin{frame}[label={sec:org31e8099}]{Conversion vers forme canonique produit de sommes}
 \begin{itemize}
 \item Si on veut convertir en forme canonique \emph{produit de sommes} l'expression pour une fonction qui ne serait pas sous cette forme, on commence par faire l'expansion de l'expression en forme \emph{produit de sommes}.
 
-\item On peut avantageusement faire appel à la distributivité de \(+\) sur \(\cdot\) pour ce faire.
+\item Pour ce faire, on peut avantageusement faire appel à la distributivité de \(+\) sur \(\cdot\).
 
 \item Ensuite, on vérifie chaque terme pour voir si toutes les variables en font partie.
 
@@ -261,7 +262,7 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd0eb907}]{Conversion entre formes canoniques}
+\begin{frame}[label={sec:orga3af2c9}]{Conversion entre formes canoniques}
 \begin{itemize}
 \item Prenons notre exemple précédent \(F_1 = \sum (2, 4, 5, 6, 7)\).
 
@@ -275,7 +276,7 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd0ef21c}]{Formes standard}
+\begin{frame}[label={sec:orgb40a2d3}]{Formes standard}
 \begin{itemize}
 \item Les expressions canoniques en \emph{somme de produits} et en \emph{produit de sommes} ne sont généralement pas simples, car toutes les variables doivent être présentes.
 
@@ -289,7 +290,7 @@ x^\prime y^\prime z + x^\prime y z $$
 \(F_1 = x + y z^\prime\)
 \end{frame}
 
-\begin{frame}[label={sec:org6b424df}]{Implémentation à deux niveaux}
+\begin{frame}[label={sec:orgf4114cb}]{Implémentation à deux niveaux}
 \begin{itemize}
 \item Lorsqu'on implémente une telle fonction avec des portes logiques, il faut une porte ET pour chaque terme produit (qui comporte plus d'une variable) et une porte OU pour faire la somme finale.
 
@@ -299,8 +300,8 @@ x^\prime y^\prime z + x^\prime y z $$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf02ffd6}]{Objectifs de minimisation}
-Étant donné une fonction logique de \(n\) variables \(z(x_1, x_2, \ldots, x_n)\), on veut déterminer une expression pour cette fonction sous la forme \emph{Somme de Produits} (S de P) ou \emph{Produit de Sommes} (P de S) qui
+\begin{frame}[label={sec:org78e2969}]{Objectifs de minimisation}
+Étant donné une fonction logique de \(n\) variables \(z(x_1, x_2, \ldots, x_n)\), on veut déterminer une expression pour cette fonction sous la forme \emph{somme de produits} (S de P) ou \emph{produit de sommes} (P de S) qui
 
 \begin{enumerate}
 \item comporte un nombre minimum de termes produits (pour la forme S de P)
@@ -311,19 +312,19 @@ de termes n'utilise moins de littéraux.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:orgc44d004}]{Diagrammes de Karnaugh}
+\begin{frame}[label={sec:orgb08dcf8}]{Diagrammes de Karnaugh}
 \begin{itemize}
 \item Une méthode visuelle permet de simplifier l'expression logique d'une fonction en systématisant une procédure faisant appel à un diagramme qui fait ressortir les simplifications possibles.
 
 \item Un diagramme de Karnaugh (diag-K) est constitué d'un regroupement de cellules carrées, chaque cellule correspondant à un minterm possible.
 
-\item Les cellules sont organisées de façon à ce que lorsqu'on passe d'une cellule à une cellule adjacente (horizontalement ou verticalement), un seul bit du minterm change, ce qui revient à dire qu'une seule variable passe de telle qu'elle à complémentée.
+\item Les cellules sont organisées de façon à ce que lorsqu'on passe d'une cellule à une cellule adjacente (horizontalement ou verticalement), un seul bit du minterm change, ce qui revient à dire qu'une seule variable passe de telle quelle à complémentée.
 
 \item Cela fait en sorte que si la fonction est 1 pour deux minterms adjacents, la somme des deux minterms pourra être simplifiée en un seul terme dans lequel la variable correspondant au bit qui change est absente.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgfeb22d6}]{Diagrammes de Karnaugh \ldots{} 2}
+\begin{frame}[label={sec:org8978d05}]{Diagrammes de Karnaugh \ldots{} 2}
 \begin{itemize}
 \item Par exemple, on pourrait avoir pour deux minterms adjacents
 \end{itemize}
@@ -331,27 +332,27 @@ de termes n'utilise moins de littéraux.
 \(m_5 + m_7 = xy^\prime z + xyz = xz(y^\prime + y) = xz\). 
 
 \begin{itemize}
-\item Ici les deux minterms adjacents diffèrent par la variable \(y\), qui sera donc supprimée du terme produit résultant.
+\item Ici, les deux minterms adjacents diffèrent par la variable \(y\), qui sera donc supprimée du terme produit résultant.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org972ee0e}]{Diagrammes de Karnaugh: deux variables}
+\begin{frame}[label={sec:org0bd4562}]{Diagrammes de Karnaugh: deux variables}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap2}
-\caption{\label{fig:orgf540a29}Diag-K à deux variables}
+\includesvg[scale=0.75]{../Images_svg/kmap2}
+\caption{\label{fig:orgc855133}Diag-K à deux variables}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org5decac2}]{Diagrammes de Karnaugh: trois variables}
+\begin{frame}[label={sec:org5d40564}]{Diagrammes de Karnaugh: trois variables}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap3minterms}
-\caption{\label{fig:org9bcc2ac}Diag-K à trois variables, avec minterms}
+\includesvg[scale=0.75]{../Images_svg/kmap3minterms}
+\caption{\label{fig:org7891238}Diag-K à trois variables, avec minterms}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgc526ccf}]{Diagrammes de Karnaugh: trois variables \ldots{} 2}
+\begin{frame}[label={sec:org5b79337}]{Diagrammes de Karnaugh: trois variables \ldots{} 2}
 \begin{itemize}
 \item Sur un diag-K à trois variables, on voit que les bits \(AB\) sont ordonnés selon un code Gray, de façon à ce qu'un seul des bits change lorsqu'on passe d'une cellule à la suivante horizontalement.
 
@@ -359,43 +360,43 @@ de termes n'utilise moins de littéraux.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9954f41}]{Diagrammes de Karnaugh: trois variables \ldots{} 3}
+\begin{frame}[label={sec:org92ecf27}]{Diagrammes de Karnaugh: trois variables \ldots{} 3}
 \begin{itemize}
 \item On peut imaginer le diagramme comme replié sur lui-même pour visualiser cette adjacence.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap3_repli}
-\caption{\label{fig:orgd7a12c9}Diag-K avec adjacence horizontale}
+\includesvg[scale=0.75]{../Images_svg/kmap3_repli}
+\caption{\label{fig:org7da8eef}Diag-K avec adjacence horizontale}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgfb12d06}]{Diagrammes de Karnaugh: quatre variables et plus}
+\begin{frame}[label={sec:orgd840be1}]{Diagrammes de Karnaugh: quatre variables et plus}
 \begin{itemize}
 \item Sur un diag-K à quatre variables, l'adjacence repliée est autant horizontale que verticale.
 
-\item Pour plus de quatre variables, il devient difficile d'utiliser cette méthode: les diagrammes sont de grande taille et surtout, les règles d'adjacence ne sont plus aussi facilement observables.
+\item Pour plus de quatre variables, il devient difficile d'utiliser cette méthode: les diagrammes sont de grande taille et, surtout, les règles d'adjacence ne sont plus aussi facilement observables.
 
 \item Les risques d'erreurs sont plus grands.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgdecb871}]{Diagrammes de Karnaugh: quatre variables}
+\begin{frame}[label={sec:org45d4bed}]{Diagrammes de Karnaugh: quatre variables}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap4}
-\caption{\label{fig:org5bddc60}Diag-K à quatre variables}
+\includesvg[scale=0.75]{../Images_svg/kmap4}
+\caption{\label{fig:org57923e0}Diag-K à quatre variables}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgb775d32}]{Procédure de simplification}
+\begin{frame}[label={sec:org1ad7609}]{Procédure de simplification}
 Pour utiliser un diag-K pour minimiser une fonction logique: 
 
 \begin{enumerate}
 \item Les minterms de la fonction à minimiser sont identifiés en insérant
 un 1 dans la cellule correspondant à chaque minterm.
-\item On cherche dans le diagramme pour trouver des regroupement de deux
+\item On cherche dans le diagramme pour trouver des regroupements de deux
 cellules adjacentes qui sont marquées d'un 1.
 \item Chaque groupe de deux cellules 1 adjacentes est marqué comme
 groupe. Un même minterm peut être incorporé à plus d'un groupe.
@@ -406,7 +407,7 @@ est ainsi possible de créer des groupes de 2, 4, 8 ou 16 minterms.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:orgb35eb3c}]{Procédure de simplification \ldots{} 2}
+\begin{frame}[label={sec:orgbdadabf}]{Procédure de simplification \ldots{} 2}
 \begin{enumerate}
 \setcounter{enumi}{4}
 \item Une fois tous les regroupements identifiés, il est possible de lire
@@ -417,7 +418,7 @@ change pas dans le groupe sont conservées; les autres sont
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org637abd9}]{Exemple de simplification}
+\begin{frame}[label={sec:orgd8d9e0b}]{Exemple de simplification}
 Considérons par exemple la fonction \(F(A,B,C) = \sum (0, 4, 6, 7)\). 
 
 \begin{itemize}
@@ -425,24 +426,24 @@ Considérons par exemple la fonction \(F(A,B,C) = \sum (0, 4, 6, 7)\).
 \end{itemize}
 
 \begin{center}
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap3fonct}
-\label{org0be2bd2}
+\includesvg[scale=0.75]{../Images_svg/kmap3fonct}
+\label{org897710e}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orga8df3a9}]{Exemple de simplification \ldots{} 2}
+\begin{frame}[label={sec:orgf254e7d}]{Exemple de simplification \ldots{} 2}
 \begin{itemize}
 \item Après les regroupements, on obtient un diag-K comportant trois regroupements
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap3fonctsimp}
-\caption{\label{fig:orgce6358f}Diagramme après les regroupements}
+\includesvg[scale=0.75]{../Images_svg/kmap3fonctsimp}
+\caption{\label{fig:org7e8f48a}Diagramme après les regroupements}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgc72ae11}]{Exemple de simplification \ldots{} 3}
+\begin{frame}[label={sec:org3b52045}]{Exemple de simplification \ldots{} 3}
 \begin{itemize}
 \item Le groupe en rouge correspond au produit \(B^\prime C^\prime\), celui en bleu correspond à \(A B\) et celui en vert correspond à \(A C^\prime\).
 
@@ -450,7 +451,7 @@ Considérons par exemple la fonction \(F(A,B,C) = \sum (0, 4, 6, 7)\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgded751b}]{Cas facultatifs}
+\begin{frame}[label={sec:orgf59fe66}]{Cas facultatifs}
 \begin{itemize}
 \item Certaines fonctions sont incomplètement définies, dans le sens où certaines combinaisons d'entrées ne se produiront jamais ou seront sans conséquences si elles se produisent.
 
@@ -460,7 +461,7 @@ Considérons par exemple la fonction \(F(A,B,C) = \sum (0, 4, 6, 7)\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1e4c65f}]{Cas facultatifs \ldots{} 2}
+\begin{frame}[label={sec:org4e1601f}]{Cas facultatifs \ldots{} 2}
 \begin{itemize}
 \item Pour tenir compte de ces cas, les minterms seront notés avec un X dans le diagramme de Karnaugh.
 
@@ -472,34 +473,34 @@ Considérons par exemple la fonction \(F(A,B,C) = \sum (0, 4, 6, 7)\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1656700}]{Cas facultatifs .. 3}
+\begin{frame}[label={sec:org956feae}]{Cas facultatifs .. 3}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap4fonct}
-\caption{\label{fig:org8121c63}Diag-K avec cas facultatifs}
+\includesvg[scale=0.75]{../Images_svg/kmap4fonct}
+\caption{\label{fig:org35640e9}Diag-K avec cas facultatifs}
 \end{figure}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf6294b1}]{Impliquants}
+\begin{frame}[label={sec:org01c09b0}]{Impliquants}
 Le choix des regroupements à utiliser doit toujours viser à s'assurer que:
 \begin{enumerate}
 \item Tous les minterms de la fonction sont couverts par les regroupements choisis.
 \item Le nombre de termes retenus pour l'expression est minimal.
-\item Il n'y a pas de termes redondants, c'est-à-dire, qui couvrent
+\item Il n'y a pas de termes redondants, c'est-à-dire qui couvrent
 uniquement des minterms déjà couverts.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:orgfe18d65}]{Impliquants \ldots{} 2}
+\begin{frame}[label={sec:org363346b}]{Impliquants \ldots{} 2}
 \begin{itemize}
-\item Il y a parfois des plus d'une expression qui rencontre ces critères.
+\item Il y a parfois plus d'une expression qui satisfait ces critères.
 
 \item Il est possible de systématiser le choix des termes en prenant en compte le caractère essentiel des termes.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge45e84f}]{Impliquants \ldots{} 3}
+\begin{frame}[label={sec:orga26fc16}]{Impliquants \ldots{} 3}
 \begin{itemize}
 \item Soit \(p(X)\) un terme produit de littéraux tirés de l'ensemble de variables \(X\).
 \end{itemize}
@@ -517,7 +518,7 @@ tient, alors \(p\) est un \alert{impliquant} de \(z\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgf8fd9af}]{Exemple pour impliquants}
+\begin{frame}[label={sec:orgd2b6423}]{Exemple pour impliquants}
 $$z_1 = ab + bc + a b^{\prime} c$$ 
 
 \(a b\), \(b c\), \(a b^{\prime} c\) sont des impliquants évidents de \(z_1\).
@@ -527,24 +528,24 @@ impliquants de \(z_1\).
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap3fonctimp}
-\caption{\label{fig:orgbdf6932}Diag-K pour l'exemple des impliquants}
+\includesvg[scale=0.75]{../Images_svg/kmap3fonctimp}
+\caption{\label{fig:orge7aad8b}Diag-K pour l'exemple des impliquants}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org02c6aac}]{Impliquant premier}
+\begin{frame}[label={sec:org8a4490f}]{Impliquant premier}
 \begin{itemize}
 \item Un impliquant \(p\) de la fonction \(z\) est \alert{premier} si n'importe quel terme produit obtenu de \(p\) en supprimant un littéral n'est pas un impliquant de \(z\).
 
 \item Ici, \(a b\) est un impliquant premier de \(z_1\) car ni \(a\) ni \(b\) ne sont des impliquants de \(z_1\).
 
-\item Mais \(a b^{\prime} c\) n'est pas un impliquant premier de \(z_1\) car \(a c\) est un impliquant de \(z_1\).
+\item Mais \(a b^{\prime} c\) n'est pas un impliquant premier de \(z_1\), car \(a c\) est un impliquant de \(z_1\).
 
 \item Sur un diagramme de Karnaugh, un impliquant premier (i.p.) est un groupe qui n'est contenu dans aucun autre groupe plus grand.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga593472}]{Couverture d'une fonction}
+\begin{frame}[label={sec:org9debb73}]{Couverture d'une fonction}
 \begin{itemize}
 \item Un sous-ensemble d'i.p. qui contient tous les minterms d'une fonction \alert{couvre} la fonction.
 \end{itemize}
@@ -555,19 +556,19 @@ Une \alert{couverture minimale} est une couverture avec:
 \item le nombre minimal d'impliquants premiers,
 
 \item le moins de littéraux parmi les couvertures avec nombre minimum
-d'implicants.
+d'impliquants.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org7deb2fa}]{Impliquant premier essentiel}
+\begin{frame}[label={sec:org80e2035}]{Impliquant premier essentiel}
 \begin{itemize}
-\item Un i.p. est \alert{essentiel} si et seulement si il couvre un minterm de la fonction qui ne peut être couvert par un autre i.p. de la fonction.  Une couverture de la fonction \alert{doit} contenir tous les impliquants premiers essentiels (i.p.e.).
+\item Un i.p. est \alert{essentiel} si et seulement s'il couvre un minterm de la fonction qui ne peut être couvert par un autre i.p. de la fonction.  Une couverture de la fonction \alert{doit} contenir tous les impliquants premiers essentiels (i.p.e.).
 
 \item Un \alert{impliquant premier absolument inessentiel} est un i.p. qui couvre des minterms qui sont tous couverts par les i.p.e. de la fonction.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org74dc25c}]{Sélection des impliquants}
+\begin{frame}[label={sec:org2723fce}]{Sélection des impliquants}
 Règles de sélection des impliquants:
 
 \begin{enumerate}
@@ -583,22 +584,22 @@ couverture minimale.
 Lorsque le problème est de taille réduite, on peut faire une recherche exhaustive de toutes les solutions possibles pour choisir la solution minimale.
 \end{frame}
 
-\begin{frame}[label={sec:orgcf5efde}]{Minimisation avec cas facultatifs}
+\begin{frame}[label={sec:orgdd3544c}]{Minimisation avec cas facultatifs}
 \begin{enumerate}
 \item Lorsqu'on détermine les i.p., on doit considérer les X comme des
 1, de façon à pouvoir utiliser les i.p. rendus possibles par les
 cas facultatifs.
 
 \item Lors de la sélection des i.p. pour obtenir une couverture
-minimale, on ne doit pas ne pas essayer de couvrir les X.
+minimale, on ne doit pas essayer de couvrir les X.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org59a73cc}]{Minimisation avec plusieurs fonctions}
+\begin{frame}[label={sec:org8fa8a11}]{Minimisation avec plusieurs fonctions}
 Si deux fonctions \(z_i\) et\(z_j\) ont des expressions minimales qui comportent un terme commun, une seule porte suffira pour générer ce terme au profit des deux fonctions.
 \end{frame}
 
-\begin{frame}[label={sec:orgdb74c14}]{Exemple de minimisation avec plusieurs fonctions}
+\begin{frame}[label={sec:orgd90aa33}]{Exemple de minimisation avec plusieurs fonctions}
 \begin{columns}
 \begin{column}{0.48\columnwidth}
 \begin{block}{}
@@ -612,23 +613,23 @@ a^{\prime} b^{\prime} c^{\prime} d$$
 \begin{block}{}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap4z1}
-\caption{\label{fig:orgdf103a4}Fonction \(z_1\)}
+\includesvg[scale=0.75]{../Images_svg/kmap4z1}
+\caption{\label{fig:org04ada6f}Fonction \(z_1\)}
 \end{figure}
 \end{block}
 \end{column}
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org9796349}]{Exemple de minimisation avec plusieurs fonctions \ldots{} 2}
+\begin{frame}[label={sec:orgdd13f17}]{Exemple de minimisation avec plusieurs fonctions \ldots{} 2}
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/kmap4z2}
-\caption{\label{fig:orgfaa81ad}Fonction \(z_2\)}
+\includesvg[scale=0.75]{../Images_svg/kmap4z2}
+\caption{\label{fig:org572d15e}Fonction \(z_2\)}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgfa53318}]{Exemple de minimisation avec plusieurs fonctions \ldots{} 3}
+\begin{frame}[label={sec:org2c7ace7}]{Exemple de minimisation avec plusieurs fonctions \ldots{} 3}
 \begin{itemize}
 \item Il est alors préférable de réutiliser les termes communs et de générer seulement les termes manquants pour la seconde fonction.
 
@@ -647,7 +648,7 @@ $$ z_1 = a c + a^{\prime} b c^{\prime} d^{\prime} + a^{\prime} b^{\prime} c^{\pr
 \end{frame}
 
 
-\begin{frame}[label={sec:orga7584ef}]{Tableau de couverture Quine-McCluskey}
+\begin{frame}[label={sec:org68fe4ba}]{Tableau de couverture Quine-McCluskey}
 \begin{itemize}
 \item La méthode de Quine-McCluskey systématise la sélection des impliquants en se basant sur des relations qui s'expriment en fonction d'un tableau de couverture.
 
@@ -657,7 +658,7 @@ $$ z_1 = a c + a^{\prime} b c^{\prime} d^{\prime} + a^{\prime} b^{\prime} c^{\pr
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7b56068}]{Problème de minimisation Q-M}
+\begin{frame}[label={sec:orgba54797}]{Problème de minimisation Q-M}
 Le problème de minimisation devient alors: trouver une couverture pour
 la fonction \(z\) qui
 
@@ -670,7 +671,7 @@ ligne.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org6d7bd44}]{Utilisation du tableau de couverture}
+\begin{frame}[label={sec:orge2dedd2}]{Utilisation du tableau de couverture}
 \begin{itemize}
 \item Dans le tableau de couverture, on identifie facilement les i.p.e. par les colonnes qui ne contiennent qu'un \(\checkmark\).
 
@@ -686,36 +687,36 @@ ligne.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org52eec3d}]{Tableau de couverture réduit}
+\begin{frame}[label={sec:orgeb0aef8}]{Tableau de couverture réduit}
 \begin{itemize}
 \item Le tableau de couverture réduit permet de se concentrer sur la sélection des i.p. dont la sélection n'est pas évidente \emph{a priori}.
 
-\item Considérons pour illustrer la discussion le tableau de couverture réduit suivant.
+\item Pour illustrer la discussion, considérons le tableau de couverture réduit suivant.
 
-\item \(m_c\) est sans doute couvert pas un i.p.e. qui n'est pas montré ici.
+\item \(m_c\) est sans doute couvert par un i.p.e. qui n'est pas montré ici.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge3df187}]{Tableau de couverture réduit \ldots{} 2}
+\begin{frame}[label={sec:org319fa53}]{Tableau de couverture réduit \ldots{} 2}
 \begin{table}[htbp]
-\caption{\label{tab:orgb12cf3e}Tableau réduit}
+\caption{\label{tab:org30cd09d}Tableau réduit}
 \centering
 \begin{tabular}{lllllllll}
- & \(m_a\) & \(m_b\) & \(m_c\) & \(m_d\) & \(m_e\) & \(m_f\) & \(m_g\) & \(m_h\)\\
+ & \(m_a\) & \(m_b\) & \(m_c\) & \(m_d\) & \(m_e\) & \(m_f\) & \(m_g\) & \(m_h\)\\[0pt]
 \hline
-\(P_A\) &  & \(\checkmark\) &  &  & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\)\\
-\(P_B\) & \(\checkmark\) & \(\checkmark\) &  &  &  & \(\checkmark\) &  & \(\checkmark\)\\
-\(P_C\) & \(\checkmark\) &  &  &  & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\)\\
-\(P_D\) &  & \(\checkmark\) &  &  &  &  &  & \(\checkmark\)\\
-\(P_E\) & \(\checkmark\) & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\) & \(\checkmark\) & \(\checkmark\) & \(\checkmark\)\\
+\(P_A\) &  & \(\checkmark\) &  &  & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\)\\[0pt]
+\(P_B\) & \(\checkmark\) & \(\checkmark\) &  &  &  & \(\checkmark\) &  & \(\checkmark\)\\[0pt]
+\(P_C\) & \(\checkmark\) &  &  &  & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\)\\[0pt]
+\(P_D\) &  & \(\checkmark\) &  &  &  &  &  & \(\checkmark\)\\[0pt]
+\(P_E\) & \(\checkmark\) & \(\checkmark\) &  & \(\checkmark\) & \(\checkmark\) & \(\checkmark\) & \(\checkmark\) & \(\checkmark\)\\[0pt]
 \end{tabular}
 \end{table}
 \end{frame}
 
 
-\begin{frame}[label={sec:org3d162a0}]{Dominance de lignes}
+\begin{frame}[label={sec:orgc6f4b8b}]{Dominance de lignes}
 \begin{itemize}
-\item Une ligne \(P_i\) domine une ligne \(P_j\) (noté \(P_i \supseteq P_j\)) si la ligne \(P_i\) contient un \(\checkmark\) dans toutes les colonnes où la ligne \(P_j\) contient un \(\checkmark\).
+\item Une ligne \(P_i\) domine une ligne \(P_j\) (ce qui est noté \(P_i \supseteq P_j\)) si la ligne \(P_i\) contient un \(\checkmark\) dans toutes les colonnes où la ligne \(P_j\) contient un \(\checkmark\).
 
 \item Ici, on a \(P_B \supseteq P_D\) mais \(P_B\) ne domine pas \(P_A\).
 
@@ -723,7 +724,7 @@ ligne.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org55702df}]{Dominance de lignes \ldots{} 2}
+\begin{frame}[label={sec:org53ebb06}]{Dominance de lignes \ldots{} 2}
 \begin{itemize}
 \item En général, une \(P_i\) dominante contient plus de \(\checkmark\) que \(P_j\).
 
@@ -735,13 +736,13 @@ ligne.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb102631}]{Dominance de colonnes}
+\begin{frame}[label={sec:orgedb466e}]{Dominance de colonnes}
 \begin{itemize}
-\item Une colonne \(m_i\) domine une colonne \(m_j\) (noté \(m_i \supseteq m_j\)) si la colonne \(m_i\) contient un \(\checkmark\) dans toutes les lignes où la colonne \(m_j\) contient un \(\checkmark\).
+\item Une colonne \(m_i\) domine une colonne \(m_j\) (ce qui est noté \(m_i \supseteq m_j\)) si la colonne \(m_i\) contient un \(\checkmark\) dans toutes les lignes où la colonne \(m_j\) contient un \(\checkmark\).
 
 \item Ici, la colonne \(m_h \supseteq m_g\) mais \(m_b\) ne domine pas \(m_a\).
 
-\item Une colonne \alert{dominant} une autre peut être éliminée du tableau de couverture, car le fait que la solution finale couvre la colonne dominée assure que la colonne dominante sera couverte aussi.
+\item Une colonne \alert{dominant} une autre colonne peut être éliminée du tableau de couverture, car le fait que la solution finale couvre la colonne dominée assure que la colonne dominante sera couverte aussi.
 
 \item Donc ici, la colonne \(m_h\) peut être éliminée.
 
@@ -749,15 +750,15 @@ ligne.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2f072d0}]{Implémentation des fonctions simplifiées}
+\begin{frame}[label={sec:org7a958e9}]{Implémentation des fonctions simplifiées}
 \begin{itemize}
 \item Les circuits logiques simplifiés en forme \emph{produit de sommes} ou \emph{somme de produits} sont souvent mis en oeuvre au moyen de portes NAND ou NOR plutôt qu'avec des portes ET et OU.
 
-\item La raison est qu'il est plus simple en pratique de réaliser ces portes.
+\item La raison en est qu'il est plus simple en pratique de réaliser ces portes.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga6163b3}]{Implémentation à deux niveaux}
+\begin{frame}[label={sec:org78e4c2a}]{Implémentation à deux niveaux}
 \begin{itemize}
 \item Une fonction en forme \emph{somme de produits} s'implémente évidemment avec des portes ET pour les produits et une porte OU pour la somme finale.
 
@@ -766,12 +767,12 @@ ligne.
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/somme_produits}
-\caption{\label{fig:org026dc0a}\emph{Somme de produits} pour \(F = AB + CD\)}
+\includesvg[scale=0.75]{../Images_svg/somme_produits}
+\caption{\label{fig:orgd50277c}\emph{Somme de produits} pour \(F = AB + CD\)}
 \end{figure} 
 \end{frame}
 
-\begin{frame}[label={sec:org1b35840}]{Implémentation à deux niveaux \ldots{} 2}
+\begin{frame}[label={sec:org08777f9}]{Implémentation à deux niveaux \ldots{} 2}
 \begin{itemize}
 \item La fonction peut aussi s'implémenter tout naturellement en faisant appel uniquement à des portes NAND.
 
@@ -780,12 +781,12 @@ ligne.
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/somme_produitsNAND2}
-\caption{\label{fig:org6d98ccc}\emph{Somme de produits} NAND}
+\includesvg[scale=0.75]{../Images_svg/somme_produitsNAND2}
+\caption{\label{fig:orgdcc340d}\emph{Somme de produits} NAND}
 \end{figure} 
 \end{frame}
 
-\begin{frame}[label={sec:orga04328f}]{Implémentation à deux niveaux \ldots{} 3}
+\begin{frame}[label={sec:orge5ffb88}]{Implémentation à deux niveaux \ldots{} 3}
 \begin{itemize}
 \item Cette configuration s'interprète plus facilement en représentant la porte de sortie comme une porte NOR avec les entrées complémentées (version équivalente de la porte NAND).
 
@@ -794,8 +795,8 @@ ligne.
 
 \begin{figure}[htbp]
 \centering
-\includesvg[scale=0.75]{../../Sources_images_logiques/images/somme_produitsNAND}
-\caption{\label{fig:org039cde8}\emph{Somme de produits} NAND plus évidente}
+\includesvg[scale=0.75]{../Images_svg/somme_produitsNAND}
+\caption{\label{fig:org498c81e}\emph{Somme de produits} NAND plus évidente}
 \end{figure}
 \end{frame}
 \end{document}
